# ODC2023

./: .gitignore  README.md  codecov.yml
.github/: dependabot.yml
.github/workflows/: pytest.yaml
CV/: Makefile  main.py  main_v.py  pyproject.toml  ref_maze.py  requirements.txt
CV/ctyper/: __init__.py
CV/pathfinder/: __init__.py  accelerate.py  astar.py  core.py  utils.py
CV/pathfinder/test/: test_accelerate.py  test_astar.py  test_init.py
CV/pathfinder/test/data/: complicate_maze.npy  complicate_shortest_path.npy  complicate_valid_path.npy  v_maze.npy
CV/translate/: __init__.py  utils.py
CV/translate/test/: test_init.py
CV/treasure/: __init__.py  core.py  correct.py  dots.py  locate.py  utils.py
CV/treasure/test/: test_correct.py  test_dots.py  test_init.py  test_locate.py
CV/treasure/test/data/: raw_boxes.npy
CV/utils/: __init__.py
CV/utils/test/: test_init.py
