[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ODC2023"
dynamic = ["version"]
description = "ODC2023"
authors = ["Sped0n", "Z-MicTure"]
requires-python = ">=3.11.0"
dependencies = [
    "matplotlib",
    "numpy",
    "opencv-contrib-python",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules",
    "--cache-clear",
]

[tool.coverage.run]
include = [
    "pathfinder/*",
    "translate/*",
    "treasure/*",
    "utils/*",
]
source_pkgs = [
    "pathfinder",
    "translate",
    "treasure",
    "utils",
]
relative_files = true

[tool.coverage.report]
include = [
    "pathfinder/*",
    "translate/*",
    "treasure/*",
    "utils/*",
]
