[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ODC2023"
dynamic = ["version"]
description = "ODC2023"
authors = ["Sped0n<github.com/Sped0n>"]
requires-python = ">=3.11.0"
dependencies = [
  "matplotlib >= 3.7.1",
  "numpy >= 1.24.3",
  "opencv-python >= 4.7.0.72",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--doctest-modules",
  "--cache-clear",
  "--cov",
  "--ignore=main.py",
  "--ignore=main_v.py",
]

[tool.coverage.run]
include = ["pathfinder/*", "translate/*", "treasure/*", "utils/*", "ctyper/*"]
relative_files = true

[tool.coverage.report]
include = ["pathfinder/*", "translate/*", "treasure/*", "utils/*", "ctyper/*"]

[tool.pyright]
venvPath = "/Users/spedon/anaconda3/envs/ODC2023/"
venv = "ODC2023"
